--- a/src/FrontEnd/FristApp/Views/Employee/AddOrEdit.cshtml
+++ b/src/FrontEnd/FristApp/Views/Employee/AddOrEdit.cshtml
@@ -3,12 +3,143 @@
 @{
     ViewData["Title"] = "AddOrEdit";
 }
+<div class="container">
+    <div class=" bg-dark p-3 form-head">
+        <h1 class="text-center text-light aling-middle">
+            Employee Form
+        </h1>
+    </div>
 
-<h1>AddOrEdit</h1>
+    <div class="form-body m-2 border-top border-secondary ">
+        <form asp-action="AddOrEdit" method="post" enctype="multipart/form-data" class="row">
+            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            <div class="col-6 mt-5">
+                <div class="form-group row">
+                    <label asp-for="EmployeeName" class="col-sm-2 col-form-label"></label>
+                    <div class="col-sm-10">
+                        <input asp-for="EmployeeName" type="text" class="form-control">
+                        <span asp-validation-for="EmployeeName" class="text-danger"></span>
+                    </div>
 
-<h4>Employee</h4>
-<hr />
-<div class="row">
+                </div>
+                <div class="form-group row">
+                        <label asp-for="Gender" class="col-sm-2 col-form-label"></label>
+                        <div class="col-sm-10">
+                            <input asp-for="Gender" type="text" class="form-control">
+                            <span asp-validation-for="Gender" class="text-danger"></span>
+                        </div>
+                    <span asp-validation-for="Gender" class="text-danger"></span>
+                </div>
+
+                <div class="form-group my-3 ">
+                    <label for="Education" class="col-sm-2 ">Education</label>
+
+                    <div class="form-check form-check-inline">
+                        <input class="form-check-input" type="checkbox" id="ssc" value="option1">
+
+                        <label class="form-check-label" asp-for="Ssc">@Html.DisplayNameFor(model => model.Ssc)</label>
+                    </div>
+                    <div class="form-check form-check-inline">
+                        <input class="form-check-input" type="checkbox" id="hsc" value="option1">
+
+                        <label class="form-check-label" asp-for="Hsc">@Html.DisplayNameFor(model => model.Hsc)</label>
+                    </div>
+                    <div class="form-check form-check-inline">
+                        <input class="form-check-input" type="checkbox" id="bsc" value="option1">
+
+                        <label class="form-check-label" asp-for="Bsc">@Html.DisplayNameFor(model => model.Bsc)</label>
+                    </div>
+                    <div class="form-check form-check-inline">
+                        <input class="form-check-input" type="checkbox" id="msc" value="option1">
+
+                        <label class="form-check-label" asp-for="Msc">@Html.DisplayNameFor(model => model.Msc)</label>
+                    </div>
+                </div>
+                <div class="form-group row">
+                    <label asp-for="Address" class="col-sm-2   col-form-label">Address </label>
+                    <div class="col-sm-10">
+                        <textarea asp-for="Address" name="address" class="form-control" id="" cols="70" rows="2"></textarea>
+                        <span asp-validation-for="Address" class="text-danger"></span>
+                    </div>
+                </div>
+                <div class="form-group row">
+                    <label asp-for="DepartmentId" class="control-label col-sm-2"></label>
+                    <div class="col-sm-10">
+                        <input asp-for="DepartmentId" class="form-control" />
+                        <span asp-validation-for="DepartmentId" class="text-danger"></span>
+                    </div>
+                </div>
+                <div class="form-group row mt-4">
+                    <label asp-for="CounrtyId" class="col-sm-2 col-form-label">Country</label>
+                    <div class="col-sm-10">
+                        <select asp-for="CounrtyId" asp-items="@(ViewBag.CountryId)" class="form-control">
+                            <option selected>-- Select Country --</option>
+                        </select>
+                    </div>
+                    <span asp-validation-for="CounrtyId" class="text-danger"></span>
+                </div>
+                <div class="form-group row mt-4">
+                    <label asp-for="StateId" class="col-sm-2 col-form-label">State</label>
+                    <div class="col-sm-10">
+                        <select asp-for="StateId" asp-items="@(ViewBag.StateId)" class="form-control">
+                            <option selected>-- Select State --</option>
+
+                        </select>
+
+                    </div>
+                    <span asp-validation-for="StateId" class="text-danger"></span>
+                </div>
+                <div class="form-group row mt-4">
+                    <label asp-for="CityId" class="col-sm-2 col-form-label">City</label>
+                    <div class="col-sm-10">
+                        <select asp-for="CityId" asp-items="@(ViewBag.CityId)" class="form-control">
+                            <option selected>-- Select City --</option>
+                        </select>
+                    </div>
+                    <span asp-validation-for="CityId" class="text-danger"></span>
+                </div>
+                <div class="form-group row mt-4">
+                    <label asp-for="JoiningDate" class="col-sm-2 col-form-label">Joining Date</label>
+                    <div class="col-sm-10">
+                        <input asp-for="JoiningDate" type="date" class="form-control">
+                    </div>
+                    <span asp-validation-for="JoiningDate" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <input type="submit" value="Create" class="btn btn-primary" />
+                </div>
+                <div>
+                    <a asp-action="Index">Back to List</a>
+                </div>
+
+
+            </div>
+            <div class="col-6 mt-5">
+                <div class="form-group">
+                    <label asp-for="Picture"></label>
+                    <input asp-for="Picture" type="file" class="form-control" name="pictureFile" accept="image/*" id="FileUpload" onchange="PreviewImage()" />
+                </div>
+                <div class="mt-3" style="text-align:end">
+                    <img src="~/images/@Model.Picture" alt="img" id="UploadFile" class="img-thumbnail" style="width:170px;" />
+
+
+                </div>
+            </div>
+          
+
+        </form>
+    </div>
+
+
+
+</div>
+
+
+
+
+
+
+@* <div class="row">
     <div class="col-md-4">
         <form asp-action="AddOrEdit" method="post" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
@@ -86,7 +217,7 @@
 
 <div>
     <a asp-action="Index">Back to List</a>
-</div>
+</div> *@
 
 <script>
 
